integration/manual/resources/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: test
  namespace: default
spec:
  rules:
    - host: test.example.com
      http:
        paths:
          - backend:
              service:
                name: test
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
